--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,97 +7,113 @@
     --color-text: #585858;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
     font-family: 'Poppins', sans-serif;
     min-height: 600px;
     padding: 3.8em 0;
+    background-image: -webkit-gradient(linear, left bottom, left top, from(#ddd6f3), color-stop(100%, #faaca8), to(#faaca8));
+    background-image: -o-linear-gradient(bottom, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
     background-image: linear-gradient(0deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);    
     background-color: #ddd6f3;
     background-repeat: no-repeat;
 }    
 
-h1 {
-    color: var(--color-primary);
-    font-size: 2.5rem;
-    font-weight: 800;
-    line-height: 1.2em;
-}
-
-h2 {
-    font-size: .9rem;
-    font-weight: 300;
-    color: var(--color-text);
-    margin: .3em 0;
-}
-
 .container {
     width: 90%;
     overflow: hidden;
-    margin: auto;
+    margin: 1rem;
     padding: 1em;
     max-width: 1200px;
     background: rgba( 255, 255, 255, 0.2 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    -webkit-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+            box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 7px );
     -webkit-backdrop-filter: blur( 7px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    display: -ms-grid;
     display: grid;
-    justify-content: center;
-    align-content: center; 
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center; 
+    grid-auto-columns: -webkit-max-content; 
     grid-auto-columns: max-content;
     grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
     gap: .5em;
 }
 
 .main__figure{
+   margin: 0 auto;
    width: 100%;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
 }
 
 .figure {
    width: 100%;
-   margin: auto;
    max-width: 100vw;
+   -webkit-animation: appearimage 1s ease-in 0.5s;
+           animation: appearimage 1s ease-in 0.5s;
 }
 
 .main__contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 1.3em;
     padding: 1em .7em;
     text-align: center;
-    animation: fadein 2s ease-in-out;
-}
-
-@keyframes fadein {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 100;
-    }
+    -webkit-animation: fadein 2s ease-in-out 0.5s;
+            animation: fadein 2s ease-in-out 0.5s;
 }
 
 .main__form{
-    display: grid;
-    justify-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: -2em;
     gap: 1.5em;
+}
+
+.subscription__done {
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
 }
 
 .input__form {
     width: 100%;
-    max-width: 800px;
     font: inherit;
     padding: .5em;
     border: none;
@@ -106,13 +122,14 @@ h2 {
 }
 
 .btn-send {
+    width: 75%;
+    text-align: center;
+    padding: .7em;
     background: var(--color-primary);
     color: var(--color-white);
     font-weight: 400;
-    cursor: pointer;
     -webkit-box-shadow: 5px 10px 10px -6px rgba(186,186,186,1);
-    -moz-box-shadow: 5px 10px 10px -6px rgba(186,186,186,1);
-    box-shadow: 5px 10px 10px -6px rgba(186,186,186,1);
+            box-shadow: 5px 10px 10px -6px rgba(186,186,186,1);
 }
 
 .btn-send:hover{
@@ -120,9 +137,13 @@ h2 {
 }
 
 .social__media{
+    display: -ms-grid;
     display: grid;
     grid-auto-flow: column;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    grid-auto-columns: -webkit-max-content;
     grid-auto-columns: max-content;
     gap: 5em;
 }
@@ -138,7 +159,84 @@ h2 {
     color: var(--color-secondary);
 }
 
+h1 {
+    color: var(--color-primary);
+    font-size: 2.5rem;
+    font-weight: 800;
+    line-height: 1.2em;
+    margin: 0 auto;
+}
 
+h3 {
+    color: var(--color-primary);
+    font-size: 1.5rem;
+    font-weight: 800;
+    line-height: 1.2em;
+    margin: 0 auto;
+}
 
+h2, .warnings {
+    font-size: .9rem;
+    font-weight: 300;
+    color: var(--color-text);
+    margin: .3em 0;
+}
 
+.warnings {
+    font-style: italic;
+}
 
+.title, .subtitle {
+    -webkit-animation:  appeartext 1s ease-in 0.5s;
+            animation:  appeartext 1s ease-in 0.5s;
+}
+
+@-webkit-keyframes fadein{
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 100;
+    }
+}
+
+@keyframes fadein{
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 100;
+    }
+}
+
+@-webkit-keyframes appearimage {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(10%);
+                transform: translateY(10%);
+      }
+}
+
+@keyframes appearimage {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(10%);
+                transform: translateY(10%);
+      }
+}
+
+@-webkit-keyframes appeartext {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(30%);
+                transform: translateY(30%);
+      }
+}
+
+@keyframes appeartext {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(30%);
+                transform: translateY(30%);
+      }
+}
